add api docs for variables endpoints
